@@ -1,0 +1,1 @@
+This Program acts as the basis for a Rogue-like Pokemon game. It randomly generates the map as the player walks into a "section" of the map. Each section of the map contains a random about of trainers that are represented by 'h','r','w','p','n', and 's' each having different behaviors. When the player approaches a trainer that has not been defeated they will enter a battle. The player character is represented by the '@' symbol. The player can move according to the controls listed in the assignment spec. The player can also press 't' to see a list of all the current players on the map. Pressing '>' while on a building will enter the building. The 'esc' key can be used to exit out of sub-menus that are not the 'map' screen. Finally pressing 'q' will quit the game. 
